[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "Data structures and interview problems"
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "data_structures", from = "src"},
    {include = "interview", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
